wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_on_invalid_defer_2.stderr
error: Expected #[defer] attribute to identify the field to defer into, found none.
  --> tests/derive_error_category/fail_on_invalid_defer_2.rs:12:5
   |
12 |     SingleTuple(ChildError),
   |     ^^^^^^^^^^^
